<resources>
    <string name="app_name">FireBaseAuth</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_signed_in">SignedInActivity</string>
    <string name="signed_in">Signed In</string>
    <string name="have_an_account">Have an account?</string>
</resources>
