<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_marginTop="42dp"
            android:layout_marginStart="8dp"
            android:id="@+id/eContainer"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_marginTop="30dp"
            app:passwordToggleEnabled="true"
            android:id="@+id/textInputLayout"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/eContainer"
            app:layout_constraintStart_toStartOf="@+id/eContainer"
            app:layout_constraintTop_toBottomOf="@+id/eContainer">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pwd"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout" android:layout_marginStart="8dp"
            android:id="@+id/signIn"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>

    <Button
            android:text="@string/sign_up"
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/signIn"
            app:layout_constraintBottom_toBottomOf="@+id/signIn"/>

</androidx.constraintlayout.widget.ConstraintLayout>