<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_sign_up"
        tools:context=".SignUp">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="395dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="8dp"
            android:id="@+id/textInputLayout2"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            android:id="@+id/password"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pwd"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            android:id="@+id/pwdRepeatCon"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/password">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pwdRepeat"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button

            android:text="@string/sign_up"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/pwdRepeatCon"
            app:layout_constraintTop_toBottomOf="@+id/pwdRepeatCon"
            android:id="@+id/signUp"/>

    <Button
            android:textSize="12sp"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:layout_height="24dp"
            android:id="@+id/haveAccount"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:textColor="@color/textAccent"
            android:text="@string/have_an_account"
            android:background="@drawable/btn_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/signUp"
            app:layout_constraintBottom_toBottomOf="@+id/signUp"/>


</androidx.constraintlayout.widget.ConstraintLayout>